--- a/index.html
+++ b/index.html
@@ -17,16 +17,16 @@
 					<div class="navbar-header">
 						<a class="navbar-brand" href="#">Trips</a>
 					</div>
-					<div class="navbar">
+					<div>
 						<ul class="nav navbar-nav">
 							<li><a href="#/">Dash</a></li>
 							<li><a href="#/logout">Log out</a></li>
 						</ul>
 					</div>
-				</div>
 
-				
+				</div>
 			</nav>
+			
 			<div class="trips">
 				<div class="container" ng-view>
 				
