--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app="App" class="no-js" lang="en">
+<html class="no-js" lang="en">
 	<head>
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,10 +8,13 @@
 
 		<link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
 		<link rel="stylesheet" href="public/css/trips.css">
+		<script src="bower_components/angular-loader/angular-loader.js"></script>
+		<script src="lib/script.min.js"></script>
+		<script src="loader.js"></script>
 	</head>
 
 	<body>
-		<div ng-controller="MainController">
+		<div>
 			<nav class="navbar navbar-inverse navbar-fixed-top">
 				<div class="container">
 					<div class="navbar-header">
@@ -35,8 +38,6 @@
 			
 		</div>
 
-		<script src="bower_components/angular/angular.js"></script>
-		<script src="bower_components/angular-route/angular-route.js"></script>
-		<script src="build/trips.js"></script>
+
 	</body>
 </html>
