Adds login-form directive

--- a/index.html
+++ b/index.html
@@ -22,9 +22,11 @@
 					</div>
 					<div>
 						<ul class="nav navbar-nav">
-							<li><a href="#/">Dash</a></li>
-							<li><a href="#/logout">Log out</a></li>
+
 						</ul>
+						<div class="navbar-right login-form">
+							<login-form></login-form>
+						</div>
 					</div>
 
 				</div>
